[tool.poetry]
name = "indexing-tools"
version = "0.3.0"
description = ""
authors = ["https://t.me/seo_code"]
readme = "README.md"
packages = [{include = "indexing_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
loguru = "^0.7.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
